Create files for win condition
created file for the eniac artifact which is a place at (0,0) that the user will go to once having the recipe to win the game

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <script src="js/loadGame.js"></script>
         <script src="js/loadSavedSessionsToSelector.js"></script>
         <script src="js/addImage.js"></script>
-
+        <script src = "js/Eniac.js"></script>
         <script src="js/badmax.js"></script>
         <script src="js/main.js"></script>
         <script src="js/freighter.js"></script>
@@ -225,6 +225,9 @@
 
             <div class="page" id="GameOver">
                 <h1>Game Over!</h1>
+            </div>
+            <div class = "page" id="GameWin">
+                <h1> You Won the Game! </h1>
             </div>
         </div>
     </body>
