Added visual for bad max
Added functionality so that you can see bad max coming at you on the map.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="js/config.js"></script>
         <script src="js/celestialArtifact.js"></script>
         <script src="js/Gazetteer.js"></script>
+        <script src="js/badmax.js"></script>
         <script src="js/worldCanvas.js"></script>
         <script src="js/map.js"></script>
         <script src="js/planet.js"></script>
@@ -34,7 +35,6 @@
         <script src="js/loadSavedSessionsToSelector.js"></script>
         <script src="js/addImage.js"></script>
         <script src = "js/Eniac.js"></script>
-        <script src="js/badmax.js"></script>
         <script src="js/main.js"></script>
         <script src="js/freighter.js"></script>
         <script src="js/SpaceStation.js"></script>
@@ -104,6 +104,7 @@
                     <div id="viewport">
                         <div id="gameWorld">
                             <img class="cellObject" id="player" src="img/player.png" alt="">
+                            <img class="cellObject" id="BadMax" src="img/badmax.png" alt="Picture of bad max's spacecraft">
                         </div>
                     </div>
                 </div>
