--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <script src="js/config.js"></script>
         <script src="js/celestialArtifact.js"></script>
+        <script src="js/asteroid.js"></script>
         <script src="js/Gazetteer.js"></script>
         <script src="js/badmax.js"></script>
         <script src="js/worldCanvas.js"></script>
